...
            "state": "translated",
            "value": "Ayuno"
          }
        }
      }
    },
    "History": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "History"
...
            "state": "translated",
            "value": "Guardar"
          }
        }
      }
    },
    "Delete Fast": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete Fast"
...
            "value": "No ads or analytics"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Sin anuncios ni analítica"
          }
        }
      }
    },
    "Simple and private": {
      "extractionState": "manual",
...
            "value": "Last Meal"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Última comida"
          }
        }
      }
    },
    "Last meal": {
      "extractionState": "manual",
...
            "value": "Meal time"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Hora de la comida"
          }
        }
      }
    },
    "Meal Time": {
      "extractionState": "manual",
...
